Implementacion logica, gestion de excepciones y test unitarios
